--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <p id="detail-redux"></p>
     <script src="public/bundle.js"></script>
 </body>
 </html>
