--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>REACTJS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        .active{
+            color: red;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
